# MCTS-Peshka

./: .gitignore
report/: Report.docx  ~$Report.docx
src/: .depend  CMakeLists.txt  Makefile  mcts.cpp  mcts.h  mcts_chess_playing.cpp  mcts_chess_playing.h  mcts_prior.cpp  mcts_prior.h  mcts_pv.cpp  mcts_pv.h  mcts_tablebase.cpp  mcts_tablebase.h  misc.cpp  movegen.h  position.cpp  position.h  search.cpp  thread.h
src/syzygy/: tbcore.cpp  tbprobe.h
